service is now responsible to delete trigger file on completion. avoids race. typo fixes

--- a/systemd/tarot.path.template
+++ b/systemd/tarot.path.template
@@ -4,5 +4,6 @@ Description=<?=PROGNAME?> state file watcher
 [Path]
 PathExists=<?=TRIGGER_FILE?>
 
+
 [Install]
-WantedBy=multi-user-target
+WantedBy=multi-user.target
