prevent tarot_handler from being served as plaintext in some setups, addresses part of #5

--- a/systemd/tarot.service.template
+++ b/systemd/tarot.service.template
@@ -6,5 +6,5 @@ Requires=<?=PROGNAME?>.path
 [Service]
 Type=oneshot
 User=root
-ExecStart=<?=APPROOT?>/bin/tarot_handler
-ExecStartPost=/usr/bin/rm -f "<?=TRIGGER_FILE?>"
+ExecStart=/usr/bin/php '<?=APPROOT?>/bin/tarot_handler.php'
+ExecStartPost=/usr/bin/rm -f '<?=TRIGGER_FILE?>'
