refactor: move handler.php code to ../bin/tarot_handler.php (never used in web gui), fixes #5 also, handler now deletes trigger file immediately after processing, not systemd.service

--- a/systemd/tarot.service.template
+++ b/systemd/tarot.service.template
@@ -7,4 +7,4 @@ Requires=<?=PROGNAME?>.path
 Type=oneshot
 User=root
 ExecStart=/usr/bin/php '<?=APPROOT?>/bin/tarot_handler.php'
-ExecStartPost=/usr/bin/rm -f '<?=TRIGGER_FILE?>'
+#ExecStartPost=-/usr/bin/rm -f '<?=TRIGGER_FILE?>'
